<resources>

    <string name="app_name">HTWG-Task Manager</string>
    <string name="hello_world">Hello world!</string>
    <string name="preferences">Preferences</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title">Title:</string>
    <string name="note">Note:</string>
    <string name="status">Status:</string>
    <string name="due">Due:</string>
    <string name="completed">Completed:</string>
    <string name="edit">edit</string>
    <string name="save">save</string>
    <string name="add">add</string>
    <string name="sync">sync</string>
    <string name="delete">delete</string>
    <string name="task">Task</string>
    <string name="tasklist">Tasklist</string>
    <string name="lb_tasklist">Tasklist:</string>
    <string name="cb_completed">Completed</string>

</resources>