<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="15dp"
        android:text="@string/add_type"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="20sp" />
    
    <RadioGroup
        android:id="@+id/rg_new_type"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/rb_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task" />

        <RadioButton
            android:id="@+id/rb_tasklist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tasklist" />
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="15dp"
        android:text="@string/title"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_weight="1.00"
        android:inputType="text" />

</LinearLayout>